# comments_classifier

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
classifier/: settings.py  wsgi.py
core/: admin.py  classifier.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
models/: toxic_classifier_model.pkl  toxic_vectorizer.pkl
nginx/: nginx.conf
scripts/: train.py
static/css/: style.css
static/js/: classifier.js
templates/: base.html  index.html
templates/includes/: header.html
