[project]
name = "comments-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "django (>=5.2.7,<6.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
